Prometheus/test app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: g-monitoring-app2-deployment
  namespace: bramterlouw-dev
  labels:
    name: g-monitoring-app2-deployment
    app: g-monitoring-app2-app
    project: language-fitness
spec:
  replicas: 2
  selector:
    matchLabels:
      name: g-monitoring-app2-deployment
      app: g-monitoring-app2-app
      project: language-fitness
  template:
    metadata:
      labels:
        name: g-monitoring-app2-deployment
        app: g-monitoring-app2-app
        project: language-fitness
    spec:
      containers:
        - name: main-container
          image: gandhicloud/g-app-store
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
