Prometheus/test app/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: g-monitoring-app2-route
  namespace: bramterlouw-dev
  labels:
    name: g-monitoring-app2-route
    app: g-monitoring-app2-app
    project: language-fitness
spec:
  path: /
  to:
    kind: Service
    name: g-monitoring-app2-service
    weight: 100
  port:
    targetPort: main-container
